fix: wrap statistics skeleton loader for small screens

--- a/src/app/statistics/pages/statistics-page/statistics-page.component.scss
+++ b/src/app/statistics/pages/statistics-page/statistics-page.component.scss
@@ -71,6 +71,14 @@
         gap: 1rem;
         justify-content: flex-start;
         align-items: center;
+        flex-wrap: wrap;
+
+        span {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 1rem;
+        }
       }
     }
 
